// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nav > renders with courses 1`] = `
<div>
  <nav
    class="nav fixed z-50 w-full bg-color-canvas container-elevated transition-all duration-300 left-1/2 -translate-x-1/2"
  >
    <div
      class="nav__container flex items-center justify-center w-full max-w-max-width h-20 mx-auto px-8"
    >
      <a
        class="nav__logo-link shrink-0 w-[200px]"
        href="/"
      >
        <img
          alt="BlueDot Impact Logo"
          class="nav__logo h-6 mr-auto"
          src="logo.png"
        />
      </a>
      <div
        class="nav__links-container flex flex-grow justify-center items-center gap-[36px] relative"
      >
        <button
          aria-expanded="false"
          class="nav__dropdown-button flex items-center gap-2 hover:text-bluedot-normal"
          type="button"
        >
          Explore
          <svg
            class="size-4 transition-transform"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
      <div
        class="nav__cta-container shrink-0 flex justify-end items-center gap-[36px]"
      >
        <a
          class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark nav__primary-cta"
          data-testid="cta-link"
          href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
        >
          <span
            class="cta-button__text"
          >
            Support us
          </span>
        </a>
      </div>
    </div>
    <div
      class="nav__dropdown overflow-hidden transition-[max-height,opacity] duration-300 flex justify-center items-center pb-7 max-h-0 opacity-0"
    >
      <div
        class="nav__dropdown-content flex flex-col gap-[14px] w-max"
      >
        <h2
          class="nav__dropdown-title font-bold text-xl"
        >
          Our courses
        </h2>
        <a
          class="nav__dropdown-link"
          href="/course1"
        >
          Course 1
        </a>
        <a
          class="nav__dropdown-link"
          href="/course2"
        >
          <span
            class="nav__new-badge text-bluedot-normal text-xl font-black pr-2"
          >
            New!
          </span>
          Course 2
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Nav > renders with optional yield 1`] = `
<div>
  <nav
    class="nav fixed z-50 w-full bg-color-canvas container-elevated transition-all duration-300 left-1/2 -translate-x-1/2"
  >
    <div
      class="nav__container flex items-center justify-center w-full max-w-max-width h-20 mx-auto px-8"
    >
      <a
        class="nav__logo-link shrink-0 w-[200px]"
        href="/"
      >
        <p
          class="nav_logo--placeholder h-8 mr-auto text-xl"
        >
          BlueDot Impact
        </p>
      </a>
      <div
        class="nav__links-container flex flex-grow justify-center items-center gap-[36px] relative"
      >
        <button
          aria-expanded="false"
          class="nav__dropdown-button flex items-center gap-2 hover:text-bluedot-normal"
          type="button"
        >
          Explore
          <svg
            class="size-4 transition-transform"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <p>
          This is the yield
        </p>
      </div>
      <div
        class="nav__cta-container shrink-0 flex justify-end items-center gap-[36px]"
      >
        <a
          class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark nav__primary-cta"
          data-testid="cta-link"
          href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
        >
          <span
            class="cta-button__text"
          >
            Support us
          </span>
        </a>
      </div>
    </div>
    <div
      class="nav__dropdown overflow-hidden transition-[max-height,opacity] duration-300 flex justify-center items-center pb-7 max-h-0 opacity-0"
    >
      <div
        class="nav__dropdown-content flex flex-col gap-[14px] w-max"
      >
        <h2
          class="nav__dropdown-title font-bold text-xl"
        >
          Our courses
        </h2>
        <a
          class="nav__dropdown-link"
          href="/course1"
        >
          Course 1
        </a>
      </div>
    </div>
  </nav>
</div>
`;
